Refactor dependency injection and remove Singleton patterns
Refactor the `Mirage`, `WorldCommand`, `ChunkRenderingSystem`, `WorldsTracker`, and `WorldsDirectoryManager` classes to use dependency injection instead of Singleton patterns. This change improves code testability and better aligns with best practices in design patterns.

I believe this should fix the API issues